--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "jquery": "2.1.x",
-    "fancybox": "2.1.x"
+    "fancybox": "2.1.x",
+    "swfobject": "2.2"
   }
 }
